# sgm-device

./: .gitignore  .project  CMakeLists.txt
SGM/: CMakeLists.txt
SGM/etc/ppp/: chap-secrets  connect-errors  ip-down  ip-up  net-chat  net-connect  options
SGMpowermgr/: .cproject  .project  CMakeLists.txt  SGMpowermgr.launch
SGMpowermgr/Debug/: SGMpowermgr
SGMpowermgr/SGMpowermgr.service/: SGMpowermgr.service
SGMpowermgr/inc/: BGS2CMux.h  ICMuxDriver.h  IModemQuery.h  ModemCMux.h  ModemPowerController.h  ModemPresenceQuery.h  PowerManager.h  ShutdownDriver.h
SGMpowermgr/src/: BGS2CMux.cpp  ModemCMux.cpp  ModemPowerController.cpp  ModemPresenceQuery.cpp  PowerManager.cpp  ShutdownDriver.cpp  main.cpp
SGMsensor/: .cproject  .project  CMakeLists.txt  SGMsensor.launch
SGMsensor/SGMsensor.service/: SGMsensor.service  SGMsensor.timer
SGMsensor/inc/: AdapterBme280.h  Bme280Sensor.h  ClientSocket.h  ISensorDevice.h  SensorHub.h  SensorServiceApplication.h
SGMsensor/src/: AdapterBme280.cpp  Bme280Sensor.cpp  SensorHub.cpp  SensorServiceApplication.cpp  main.cpp
SGMsink/: .cproject  .project  CMakeLists.txt  SGMsink.launch
SGMsink/Debug/: SGMsink  sgm_datasink
SGMsink/SGMsink.service/: SGMsink.service  SGMsink.socket
SGMsink/inc/: DeviceId.h  IMessageProtocol.h  INetworkProvider.h  Logging.h  MqttClient.h  MqttProtocol.h  PppConnection.h  PppEndpoint.h  SgmSink.h  SinkSocket.h  SinkStateMachine.h  SocketReader.h  processing_thread.h
SGMsink/sgm_datasink.service/: sgm_datasink.service  sgm_datasink.socket
SGMsink/src/: DeviceId.cpp  MqttClient.cpp  MqttProtocol.cpp  PppConnection.cpp  PppEndpoint.cpp  SgmSink.cpp  SinkStateMachine.cpp  SocketReader.cpp  main.c  main.cpp  processing_thread.cpp
SGMutils/: .cproject  .project  CMakeLists.txt  SGMutils.launch
SGMutils/inc/: AtCommand.h  AtGenericResponse.h  AtResponse.h  HistoricalValue.h  IAtCommand.h  IServiceSocket.h  Logger.h  ProcessSharedFlag.hpp  SGMDataType.h  SGMfixtures.h  SharedDataType.h  SharedMemory.h
SGMutils/inc/bgs2/: At.h  CopsInterpreter.h  PlainAtInterpreter.h
SGMutils/inc/bgs2/at/: At.h  Cops.h  CopsResponse.h  Smso.h
SGMutils/src/: SharedMemory.cpp
SGMutils/src/bgs2/: At.cpp  CopsInterpreter.cpp  PlainAtInterpreter.cpp
SGMutils/src/bgs2/at/: At.cpp  Cops.cpp  CopsResponse.cpp  Smso.cpp
cmake/: CMakeLists.txt  compute_md5.sh
inc/: I2CDevice.h
meteo/: .cproject  SGMeteo.launch
meteo/Debug/: SGMeteo  compiling_error.txt
meteo/Debug/src/: subdir.mk
meteo/inc/: APSensor.hpp  AtModem.h  DeviceBme280.h  ISensor  ISensor.hpp  SensorManager.hpp  TemperatureSensor.hpp
meteo/src/: APSensor.cpp  DeviceBme280.cpp  I2CDevice.cpp  SensorManager.cpp  TemperatureSensor.cpp  main.cpp
misc/: .cproject  .project  main.c
misc/Debug/: PahoIntegrationTest  main.d  makefile  objects.mk  sources.mk  subdir.mk
misc/Debug/MQTT/: Clients.d  Heap.d  LinkedList.d  Log.d  MQTTAsync.d  MQTTClient.d  MQTTPacket.d  MQTTPacketOut.d  MQTTPersistence.d  MQTTPersistenceDefault.d  MQTTProtocolClient.d  MQTTProtocolOut.d  MQTTVersion.d  Messages.d  SSLSocket.d  Socket.d  SocketBuffer.d  StackTrace.d  Thread.d  Tree.d  subdir.mk  utf-8.d
misc/Debug/MQTT/samples/: MQTTAsync_publish.d  MQTTAsync_subscribe.d  pahopub.d  pubasync.d  pubsync.d  stdinpub.d  stdinpuba.d  stdoutsub.d  stdoutsuba.d  subasync.d  subdir.mk
misc/paho/: libpaho-mqtt3a.so.1.0  libpaho-mqtt3as.so.1.0  libpaho-mqtt3c.so.1.0  libpaho-mqtt3cs.so.1.0
src/: AtModem.cpp
testapp/SGMeteoTestApp/: SGMeteoTestApp.sln
testapp/SGMeteoTestApp/SGMeteoTestApp/: DataProvider.cs  MainWindow.cs  Program.cs  SGMeteoTestApp.csproj
testapp/SGMeteoTestApp/SGMeteoTestApp/Properties/: AssemblyInfo.cs
testapp/SGMeteoTestApp/SGMeteoTestApp/gtk-gui/: MainWindow.cs  gui.stetic
